--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@
 
 body {
     font-family: 'Roboto';
-    font-weight: 400;
     font-size: 12px;
     color: #fff;
 }
@@ -23,34 +22,33 @@ a {
 }
 
 .main {
-    background: url(../img/bg.jpg) no-repeat 100% / cover;
-    /* position: relative;
-    height: 777px; */
+    background: url(../img/bg.jpg) no-repeat 50% / cover;
+    height: 100vh;
+    overflow: hidden;
 }
 
 .container {
-    /* position: absolute;
-    right: 0;
-    top: 0; */
     height: 100%;
-    display: flex;
-    justify-content: end;
-}
-
-
-.form {
-    width: 496px;
+    max-width: 496px;
+    margin-left: auto;
     background: rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(3px);
+    overflow: auto;
+}
+
+.form {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0 78px;
+    padding: 60px 0;
+    max-width: 340px;
+    margin: 0 auto;
 }
 
 .switch {
-    margin: 60px 0 75px;
+    margin: 0 0 75px;
+    width: 100%;
 }
 
 .input__switch {
@@ -63,7 +61,7 @@ a {
 
 .label__switch {
     display: flex;
-    width: 340px;
+    width: 100%;
     height: 36px;
     border: 2px solid #03045e;
     border-radius: 30px;
@@ -77,10 +75,10 @@ a {
     content: '';
     top: 2px;
     left: 2px;
+    bottom: 2.5px;
     background: #03045e;
     border-radius: 30px;
-    width: 168px;
-    height: 28.5px;
+    width: 50%;
 }
 
 .input__switch:checked + .label__switch::before {
@@ -103,9 +101,6 @@ a {
 }
 
 .inputs {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
     margin: 0 0 21px;
 }
 
@@ -113,17 +108,20 @@ a {
     border: 1px solid #03045e;
     border-radius: 30px;
     background: #d8d8d8;
-    width: 340px;
-    height: 44px;
+    width: 100%;
     padding: 15px 0 15px 20px;
     color: #03045e;
+}
+
+.input__email {
+    margin: 0 0 15px;
 }
 
 .desc {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 100px;
+    width: 100%;
     padding: 0 0 30px;
 }
 
@@ -180,10 +178,12 @@ a {
 .btn {
     border-radius: 30px;
     background: #03045e;
-    padding: 15px 153px;
+    padding: 15px;
+    width: 100%;
     text-align: center;
     margin: 0 0 40px;
     cursor: pointer;
+    color: #ededed;
 }
 
 .btn:hover {
@@ -220,7 +220,6 @@ a {
     justify-content: center;
     align-items: center;
     gap: 6px;
-    margin: 0 0 171px;
 }
 
 .icon a {
