--- a/css/style.css
+++ b/css/style.css
@@ -184,11 +184,17 @@ a {
     margin: 0 0 40px;
     cursor: pointer;
     color: #ededed;
+    transition: all .3s linear;
 }
 
 .btn:hover {
     background: transparent;
     box-shadow: inset 0 0 10px 0 #03045e;
+    transition: all .3s linear;
+}
+
+.btn:active {
+    background: #3c3e95;
 }
 
 .account {
